<resources>
    <string name="app_name">App Movies</string>
    <string name="poster_content_description">this is a film poster</string>
    <string name="label_horrors">Ужасы, триллеры</string>
    <string name="label_actions">Боевики, драмы, приключения</string>
    <string name="label_comedies">Комедии, мультфильмы</string>
    <string name="download_data_error">Ошибка загрузки данных</string>
    <string name="rating_star_content_description">Звезда - иконка рейтинга</string>
    <string name="menu_item_movies">Все фильмы</string>
    <string name="menu_item_selected">Избранное</string>
    <string name="menu_item_parameters">Параметры</string>
    <string name="FAB_icon">Кнопка добавляющая фильм в избранное</string>
    <string name="movie_removed_from_DB_toast">Фильм удален из избранного</string>
    <string name="movie_added_into_DB_toast">Фильм добавлен в избранное</string>
    <string name="include_adult_content">Включить \'взрослый контент\'</string>
    <string name="menu_item_my_notes">Заметки</string>
    <string name="button_add_note">Кнопка добавляющая заметку</string>
    <string name="hint_film_title">Название фильма</string>
    <string name="hint_date_of_watching_film">Дата просмотра</string>
    <string name="hint_my_review">Отзыв</string>
    <string name="button_add_note_text">Добавить заметку</string>
    <string name="menu_item_contacts">Контакты</string>
    <string name="question_title_access_to_contacts">Предоставить доступ к контактам?</string>
    <string name="explanation_access_to_contacts">Приложению требуется доступ к контактам для отображения их во фрагменте</string>
    <string name="agree_access_to_contacts">Предоставить доступ</string>
    <string name="refuse_access_to_contacts">Отказаться</string>
    <string name="refuse_title_access_to_contacts">В доступе к контактам отказано</string>
    <string name="refuse_explanation_access_to_contacts">В этом фрагменте контакты не будут отображены</string>
    <string name="close_access_to_contacts">Закрыть</string>
    <string name="default_address">Red Square, 1, Moscow</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">Start</string>
    <string name="button_get_actors_text">Получить список актеров</string>
    <string name="actor_photo">Фото актера или актрисы</string>
    <string name="FAB_image_map">Изображение карты на FAB</string>
</resources>