<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.FilmDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/filmDescriptionPoster"
                android:layout_width="@dimen/film_description_poster_width"
                android:layout_height="@dimen/film_description_poster_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:contentDescription="@string/poster_content_description"
                android:scaleType="centerCrop"
                tools:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/filmDescriptionTitle"
                style="@style/fragment_film_detail_views_style"
                android:gravity="center"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"
                tools:text="Какой-то фильм" />

            <FrameLayout style="@style/fragment_film_detail_views_style">

                <TextView
                    android:id="@+id/filmDescriptionYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/default_text_size"
                    tools:text="2020" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/imageStarForRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/rating_star_content_description"
                        android:src="@android:drawable/star_on" />

                    <TextView
                        android:id="@+id/filmDescriptionRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/default_text_size"
                        tools:text="7.7" />
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/filmDescriptionDescription"
                style="@style/fragment_film_detail_views_style"
                android:textSize="@dimen/default_text_size"
                android:textStyle="italic"
                tools:text="Здесь будет описание фильма" />

            <Button
                android:id="@+id/buttonGetActors"
                style="@style/fragment_film_detail_views_style"
                android:text="@string/button_get_actors_text" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFilmToSelectedFilms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/big_margin"
        android:contentDescription="@string/FAB_icon"
        android:src="@drawable/icon_selected_films" />

</FrameLayout>